--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Builderz - Construction Company Website Template</title>
+        <title>Moi chemineer Ltd -  </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Construction Company Website Template" name="keywords">
-        <meta content="Construction Company Website Template" name="description">
+        <meta content=" " name="keywords">
+        <meta content=" " name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -36,7 +36,7 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
-                                    <!-- <h1>Builderz</h1> -->
+                                    <!-- <h1>Moi chemineer Ltd</h1> -->
                                     <img src="./img/moi-full-logo-transformed.png" />
                                     <!-- <img src="img/logo.jpg" alt="Logo"> -->
                                 </a>
@@ -108,7 +108,6 @@
                                     </div>
                                 </div>
                                 <a href="service.html" class="nav-item nav-link">Services</a>
-                                <a href="team.html" class="nav-item nav-link">Team</a>
                                 <a href="portfolio.html" class="nav-item nav-link">portfolio</a>
                                 
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -374,7 +373,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="col-lg-4 col-md-6 wow fadeInUp mt-4" data-wow-delay="0.4s">
                             <div class="service-item">
                                 <div class="service-img">
                                     <img src="img/service-4.jpg" alt="Image" style="width: 350px; height: 262.5px;">
@@ -389,7 +388,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="col-lg-4 col-md-6 wow fadeInUp mt-4" data-wow-delay="0.5s">
                             <div class="service-item">
                                 <div class="service-img">
                                     <img src="img/service-5.jpg" alt="Image" style="width: 350px; height: 262.5px;">
@@ -404,7 +403,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="col-lg-4 col-md-6 wow fadeInUp mt-4" data-wow-delay="0.6s">
                             <div class="service-item">
                                 <div class="service-img">
                                     <img src="img/service-6.jpg" alt="Image" style="width: 350px; height: 262.5px;">
@@ -531,8 +530,130 @@
                 </div>
             </div>
             <!-- Team End -->
-            
-
+            <!-- Portfolio Start -->
+            <div class="portfolio">
+                <div class="container">
+                    <div class="section-header text-center">
+                        <p>Portfolio</p>
+                        <h2>Our recent Projects</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <ul id="portfolio-flters">
+                                <li data-filter="*" class="filter-active">All</li>
+                                <li data-filter=".first">Piping</li>
+                                <li data-filter=".second">Rehabilitation</li>
+                                <li data-filter=".third">Maintenance</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row portfolio-container">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolios/latest-proj-one.jpg" style="width: 400px; height: 300px;" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            PIPING WORK AT DANIUM TANK FARM 2 ORON AKWA IBOM STATE
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Piping <span style="font-size: 10px; color: whitesmoke;">Tank farm 2, Oron</span></h3>
+                                    <a class="btn" href="img/portfolios/latest-proj-one.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.2s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolios/emadebfour.jpg" style="width: 400px; height: 300px;" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            REHABILITATION OF EMADEB DEPOT BY MOI CHEMINEER LTD
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Rehabilitation <span style="font-size: 10px; color: whitesmoke;">Emadeb Depot</span></h3>
+                                    <a class="btn" href="img/portfolios/emadebfour.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.3s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolios/latest-proj-two.jpg" style="width: 400px; height: 300px;" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            REHABILITATION OF FIRST DEEPWATER DEPOT
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Rehabilitation <span style="font-size: 10px; color: whitesmoke;">Deep water Depot</span></h3>   
+                                    <a class="btn" href="img/portfolios/latest-proj-two.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mt-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.4s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolios/latest-proj-three.jpg"
+                                    style="width: 400px; height: 300px;" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            PIPING WORK AT DANIUM TANK FARM 2 ORON AKWA IBOM STATE
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Piping <span style="font-size: 10px; color: whitesmoke;">Tank farm 2, Oron</span></h3>
+                                    <a class="btn" href="img/portfolios/latest-proj-three.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mt-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolios/emadebsix.jpg" style="width: 400px; height: 300px;" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            REHABILITATION OF EMADEB DEPOT BY MOI CHEMINEER LTD
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Rehabilitation <span style="font-size: 10px; color: whitesmoke;">Emadeb Depot</span></h3>
+                                    <a class="btn" href="img/portfolios/emadebsix.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mt-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolios/testimonial-4.jpg" style="width: 400px; height: 300px;" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            REHABILITATION OF FIRST DEEPWATER DEPOT
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Rehabilitation <span style="font-size: 10px; color: whitesmoke;">Deep water Depot</span></h3>
+                                    <a class="btn" href="img/portfolios/testimonial-4.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 load-more">
+                            <a class="btn" href="portfolio.html">View Full Portfolio →</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Portfolio End -->
             <!-- FAQs Start -->
             <div class="faqs">
                 <div class="container">
