--- a/single.html
+++ b/single.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Builderz - Construction Company Website Template</title>
+        <title>Moi chemineer Ltd -  </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Construction Company Website Template" name="keywords">
-        <meta content="Construction Company Website Template" name="description">
+        <meta content=" " name="keywords">
+        <meta content=" " name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -36,7 +36,7 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
-                                    <!-- <h1>Builderz</h1> -->
+                                    <!-- <h1>Moi chemineer Ltd</h1> -->
                                     <img src="./img/moi-full-logo-transformed.png" />
                                     <!-- <img src="img/logo.jpg" alt="Logo"> -->
                                 </a>
