--- a/about.html
+++ b/about.html
@@ -8,8 +8,7 @@
         <meta content=" " name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
-
+        <link href="img/moi-full-logo-transformed.png" rel="icon" >
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
@@ -113,7 +112,7 @@
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
                             <div class="ml-auto">
-                                <a class="btn" href="#">Book Us Now</a>
+                                <a class="btn" href="contact.html">Book Us Now</a>
                             </div>
                         </div>
                     </nav>
@@ -166,7 +165,7 @@
                                         <h4 style="font-size: 16px;">Our mission</h4>
                                         <p style="font-size: 14px;">Moi Chemineer Ltd is commited to making a world class difference in engineering, construction, plant design and development, as well as fundamental process research and engineering solution. To be the number one company provider of total quality service and Engineering Solutions</p>
                                     </div>
-                                <a class="btn" href="">Contact us now</a>
+                                <a class="btn" href="contact.html">Contact us now</a>
                             </div>
                         </div>
                     </div>
