--- a/service.html
+++ b/service.html
@@ -113,7 +113,7 @@
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
                             <div class="ml-auto">
-                                <a class="btn" href="#">Book Us Now</a>
+                                <a class="btn" href="contact.html">Book Us Now</a>
                             </div>
                         </div>
                     </nav>
@@ -272,7 +272,7 @@
                     border-radius: 0;
                     background: #60cc60;
                     transition: .3s;
-                    text-align: center;" href="">Contact us now</a>
+                    text-align: center;" href="contact.html">Contact us now</a>
                 </div>
             </div>
             <!-- Service End -->
