--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Moi chemineer Ltd -  </title>
+        <title>Moi chemineer Ltd  </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content=" " name="keywords">
         <meta content=" " name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <!-- <link href="img/favicon.ico" rel="icon"> -->
+        <link href="img/moi-full-logo-transformed.png" rel="icon" >
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -113,7 +114,7 @@
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
                             <div class="ml-auto">
-                                <a class="btn" href="#">Book Us Now</a>
+                                <a class="btn" href="contact.html">Book Us Now</a>
                             </div>
                         </div>
                     </nav>
@@ -242,7 +243,7 @@
                                         <div class="w-1/12"><img style="height: 30px; width: 30px;" src= "./img/checkbox.png" alt="about-checkbox"/></div>
                                         <div class="w-11/12 pt-1"><p style="margin-top: 3px; margin-left: 10px; font-weight: 500; color: black;">OUR ENGINEERING SOLUTIONS STAND OUT</p></div>
                                     </div>
-                                <a class="btn" href="">Contact us now</a>
+                                <a class="btn" href="contact.html">Contact us now</a>
                             </div>
                         </div>
                     </div>
