--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,7 @@
         <meta content=" " name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
-
+        <link href="img/moi-full-logo-transformed.png" rel="icon" >
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
@@ -113,7 +112,7 @@
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
                             <div class="ml-auto">
-                                <a class="btn" href="#">Book Us Now</a>
+                                <a class="btn" href="contact.html">Book Us Now</a>
                             </div>
                         </div>
                     </nav>
