--- a/contact.html
+++ b/contact.html
@@ -271,7 +271,7 @@
                             <p>&copy; <a href="#">2023, Moi Chemineer Ltd</a>, All Right Reserved.</p>
                         </div>
                         <div class="col-md-6">
-                            <p style="font-size: 8px;">Designed By <a href="twitter.com/unclebayotics">unclebayotics</a></p>
+                            <p style="font-size: 8px;">Designed By <a href="https://twitter.com/unclebayotics">unclebayotics</a></p>
                         </div>
                     </div>
                 </div>
