footer link fix

--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
                             <p>&copy; <a href="#">2023, Moi Chemineer Ltd</a>, All Right Reserved.</p>
                         </div>
                         <div class="col-md-6">
-                            <p style="font-size: 8px;">Designed By <a href="https://twitter.com/unclebayotics">unclebayotics</a></p>
+                            <p style="font-size: 8px;">Designed By <a href = "https://bayotics.github.io/updated-portfolio/" target="_blank">Abdullahi sho</a></p>
                         </div>
                     </div>
                 </div>
